<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot_usd"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:title="@string/usd"
        app:domainTitle="@string/domainTitle"
        app:lineLabels="left|bottom"
        app:lineLabelRotationBottom="-45"/>

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot_eur"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:title="@string/eur"
        app:domainTitle="@string/domainTitle"
        app:lineLabels="left|bottom"
        app:lineLabelRotationBottom="-45"/>

</LinearLayout>